--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 # ReconIQ Configuration
 
 # Google Gemini API Configuration
-GEMINI_API_KEY=AIzaSyDEULe7IPbmlFPc7H8UqHpWPjKSHKZodrM
+GEMINI_API_KEY=ENTER YOUR GEMINI API KEY
 
 # API Configuration
 API_HOST=0.0.0.0
